// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render Button with rounded border 1`] = `
<button
  className="btn sans-bold default rounded"
  onClick={undefined}
  type="button"
>
  click me!
</button>
`;

exports[`Render Button with type submit 1`] = `
<button
  className="btn sans-bold default rounded"
  onClick={undefined}
  type="submit"
>
  Submit form
</button>
`;

exports[`Render Button without rounded border 1`] = `
<button
  className="btn sans-bold default"
  onClick={undefined}
  type="button"
>
  click me!
</button>
`;
